# hse-artur-clf-competition

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: Untitled.ipynb  Untitled1.ipynb  make embeddings.ipynb  mlp.ipynb  submission.csv
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
src/: config.py
src/feature/: content.py  lingustic.py  ritorical.py
